@@ -1,3 +1,8 @@
+2001-01-30  Alan Modra  <alan@linuxcare.com.au>
+
+	* elf64-hppa.c (elf64_hppa_elf_get_symbol_type): New function.
+	(elf_backend_get_symbol_type): Define.
+
 2001-01-30  Curtis L. Janssen  <cljanss@ca.sandia.gov>
 
 	* elf64-alpha.c (elf64_alpha_find_nearest_line): Query dwarf2
